- added it-system to the data object stencils

--- a/editor/etc/web.xml
+++ b/editor/etc/web.xml
@@ -148,7 +148,7 @@
 		<servlet-class>
 			org.oryxeditor.server.IBPMN2BPMNServlet
 		</servlet-class>
-//TODO
+
 	</servlet>
 		<servlet>
 		<display-name>
@@ -373,6 +373,13 @@
 		</servlet-class>
 	</servlet>
 
+	<servlet>
+		<display-name>BPMN 1.1 to BPMN 2.0 Migration</display-name>
+		<servlet-name>BPMN2MigrationServlet</servlet-name>
+		<servlet-class>
+			org.oryxeditor.server.BPMN2MigrationServlet
+		</servlet-class>
+	</servlet>
 
     <!-- Servlet Mappings -->
 <!--	
@@ -600,6 +607,10 @@
 		<url-pattern>/bpmn2_0deserialization</url-pattern>
 	</servlet-mapping>
 
+	<servlet-mapping>
+		<servlet-name>BPMN2MigrationServlet</servlet-name>
+		<url-pattern>/bpmn2migration</url-pattern>
+	</servlet-mapping>
 	
 	<jsp-config>
 		<taglib>
