introduced changes for PMS - pms profile definition - adjustments to work with signavio file repository

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-deploymentdir = C:/Programme/Tomcat6/webapps
+deploymentdir = /Library/Tomcat/Home/webapps
 java-debug = on
 postgresql-hostname = localhost
 postgresql-username = poem
