--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="src" path="poem-jvm/test/selenium"/>
 	<classpathentry kind="src" path="poem-jvm/test/java"/>
 	<classpathentry kind="src" path="buildApps/src"/>
+	<classpathentry excluding="src/" kind="src" path="editor/server"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="poem-jvm/lib/antlr-2.7.6.jar"/>
@@ -171,5 +172,6 @@
 	<classpathentry kind="lib" path="editor/lib/jaxb1-impl.jar"/>
 	<classpathentry kind="lib" path="editor/lib/jsr173_1.0_api.jar"/>
 	<classpathentry kind="lib" path="buildApps/lib/yuicompressor-2.4.2.jar"/>
+	<classpathentry kind="lib" path="editor/lib/xstream-1.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
