--- a/.classpath
+++ b/.classpath
@@ -172,7 +172,6 @@
 	<classpathentry kind="lib" path="editor/lib/jaxb1-impl.jar"/>
 	<classpathentry kind="lib" path="editor/lib/jsr173_1.0_api.jar"/>
 	<classpathentry kind="lib" path="buildApps/lib/yuicompressor-2.4.2.jar"/>
-	<classpathentry kind="lib" path="editor/lib/xstream-1.3.1.jar"/>
-	<classpathentry kind="lib" path="editor/lib/xmappr-0.9.2.jar"/>
+	<classpathentry kind="lib" path="editor/lib/xmappr-0.9.2-serializable.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
