eintrag für cpntoolsexporter

--- a/editor/etc/web.xml
+++ b/editor/etc/web.xml
@@ -380,6 +380,15 @@
 			org.oryxeditor.server.BPMN2MigrationServlet
 		</servlet-class>
 	</servlet>
+	
+	<!-- Gerardo's Posts for CPNTools Support --> 
+	<servlet>
+		<display-name>Colored Petri Net to CPN Tools</display-name>
+		<servlet-name>CPNToolsExporter</servlet-name>
+		<servlet-class>org.oryxeditor.server.CPNToolsExporter</servlet-class>
+	</servlet>
+	
+	<!-- Gerardo's Posts finished -->
 
     <!-- Servlet Mappings -->
 <!--	
@@ -611,6 +620,13 @@
 		<servlet-name>BPMN2MigrationServlet</servlet-name>
 		<url-pattern>/bpmn2migration</url-pattern>
 	</servlet-mapping>
+	
+	<!-- Gerardo's Mapping for CPNTool support -->
+	<servlet-mapping>
+		<servlet-name>CPNToolsExporter</servlet-name>
+		<url-pattern>/cpntoolsexporter</url-pattern>
+	</servlet-mapping>
+	<!-- Gerardo's Mapping finished -->
 	
 	<jsp-config>
 		<taglib>
