--- a/editor/etc/web.xml
+++ b/editor/etc/web.xml
@@ -347,7 +347,15 @@
 			org.oryxeditor.server.BPMNLayouterServlet
 		</servlet-class>
 	</servlet>
-    	
+    
+    <servlet>
+		<display-name>ViewGenerator</display-name>
+		<servlet-name>ViewGeneratorServlet</servlet-name>
+		<servlet-class>
+			org.oryxeditor.server.ViewGeneratorServlet
+		</servlet-class>
+	</servlet>
+	
 	<servlet>
 		<display-name>EPC Layouter</display-name>
 		<servlet-name>EPCLayouterServlet</servlet-name>
@@ -591,7 +599,11 @@
 		<url-pattern>/bpmnlayouter</url-pattern>
 	</servlet-mapping>
     
-
+    <servlet-mapping>
+		<servlet-name>ViewGeneratorServlet</servlet-name>
+		<url-pattern>/viewgenerator</url-pattern>
+	</servlet-mapping>
+	
 	<servlet-mapping>
 		<servlet-name>EPCLayouterServlet</servlet-name>
 		<url-pattern>/epclayouter</url-pattern>
