--- a/build.properties
+++ b/build.properties
@@ -3,4 +3,4 @@ java-debug = on
 postgresql-hostname = localhost
 postgresql-username = poem
 postgresql-port = 5432
-postgresql-bin-dir = /usr/bin
+postgresql-bin-dir = C:\\Programme\\PostgreSQL\\8.3\\bin
