Removed test data

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-deploymentdir = /Library/Tomcat/Home/webapps
+deploymentdir = C:\\Program Files (x86)\\Apache Software Foundation\\Tomcat 6.0\\webapps
 java-debug = on
 postgresql-hostname = localhost
 postgresql-username = poem
