Last minute commit

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-deploymentdir = /Library/Tomcat/Home/webapps
+deploymentdir = /Users/bart/Downloads/apache-tomcat-6.0.20/webapps
 java-debug = on
 postgresql-hostname = localhost
 postgresql-username = poem
