--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-deploymentdir = C:/Programme/Tomcat6/webapps
+deploymentdir = C:\\Program Files\\Apache Software Foundation\\Tomcat 6.0\\webapps
 java-debug = on
 postgresql-hostname = localhost
 postgresql-username = poem
