--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-deploymentdir = C:/Programme/Tomcat6/webapps
+deploymentdir = /home/step/Programme/Tomcat/webapps
 java-debug = on
 postgresql-hostname = localhost
 postgresql-username = poem
