SERVER (branches/pmp2010-07)
VISIO IMPORT: 

* Finally got the front-end working: 
	- requesting import.js gets the data and posts to the servlet
	- visioimport profile
	
* Removed some defects

--- a/editor/etc/web.xml
+++ b/editor/etc/web.xml
@@ -437,6 +437,21 @@
 	</servlet>
 	
 	<!-- Gerardo's Posts finished -->
+	
+	<!-- Added by Lauritz Thamsen - PMP seminar 2010 - Visio Import - Start -->
+	<servlet>
+		<display-name>Visio</display-name>
+		<servlet-name>VisioBPMNImporter</servlet-name>
+		<servlet-class>org.oryxeditor.server.VisioBPMNImporter</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>VisioBPMNImporter</servlet-name>
+		<url-pattern>/visiobpmnimport</url-pattern>
+	</servlet-mapping>
+	
+	<!-- Added by Lauritz Thamsen - PMP seminar 2010 - Visio Import - End -->
+	
 
     <!-- Servlet Mappings -->
 <!--	
