started to implement serialization of unused attributes (currently only available for AdonisModel) added file which holds the types of attributes (currently independent from the stencils)

--- a/editor/server/src/de/hpi/AdonisSupport/CompatibilityMappings.json
+++ b/editor/server/src/de/hpi/AdonisSupport/CompatibilityMappings.json
@@ -13,7 +13,7 @@
 		},		
 		"performance": {
 			"Leistung": ["de"],
-			"Performance": ["end"]
+			"Performance": ["en"]
 		},
 		"has process": {
 			"Has process": ["en"],
@@ -32,6 +32,10 @@
 		},
 		"aggregation": {
 			"Aggregation": ["de","en"]
+		},
+		"company map": {
+			"Company map": ["en"],
+			"Prozeßlandkarte": ["de"]
 		}
 	},
 	"configuration": {
