--- a/.classpath
+++ b/.classpath
@@ -64,7 +64,11 @@
 	<classpathentry kind="lib" path="poem-jvm/lib/xmlgraphics-commons-1.3.jar"/>
 	<classpathentry kind="lib" path="poem-jvm/lib/xmlsec-1.3.0.jar"/>
 	<classpathentry kind="lib" path="buildApps/lib/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="buildApps/lib/org.json.jar"/>
+	<classpathentry kind="lib" path="buildApps/lib/org.json.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://www.json.org/javadoc/org/json/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="editor/lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="editor/lib/commons-collections-3.2.jar"/>
 	<classpathentry kind="lib" path="editor/lib/commons-configuration-1.5.jar"/>
