implemented basic lane layouting to match the adonis constraints from basic attributes are imported and exported
for faster development there are some attributes currently hard coded and not "translated"

currently missing - further implementation of lanes constraints

--- a/editor/server/src/de/hpi/AdonisSupport/CompatibilityMappings.json
+++ b/editor/server/src/de/hpi/AdonisSupport/CompatibilityMappings.json
@@ -27,8 +27,17 @@
 			"is inside":["en"],
 			"ist innerhalb": ["de"]
 		},
+		"swimlane (vertical)": {
+			"Schwimmbahn (senkrecht)":["de"]
+		},
 		"swimlane (horizontal)": {
-			"Schwimmbahn (waagrecht)": ["de"]
+			"Schwimmbahn (waagerecht)": ["de"]
+		},
+		"horizontal": {
+			"waagerecht": ["de"]
+		},
+		"vertical": {
+			"senkrecht": ["de"]
 		},
 		"aggregation": {
 			"Aggregation": ["de","en"]
