--- a/.classpath
+++ b/.classpath
@@ -19,7 +19,7 @@
 	<classpathentry kind="lib" path="poem-jvm/lib/commons-codec-1.2.jar"/>
 	<classpathentry kind="lib" path="poem-jvm/lib/commons-collections-2.1.1.jar"/>
 	<classpathentry kind="lib" path="poem-jvm/lib/commons-collections-2.1.jar"/>
-	<classpathentry kind="lib" path="poem-jvm/lib/commons-httpclient-3.0.1.jar"/>
+	<classpathentry kind="lib" path="poem-jvm/lib/commons-httpclient-3.0.1.jar" sourcepath="C:/Users/Philipp/.m2/repository/commons-httpclient/commons-httpclient/3.0.1/commons-httpclient-3.0.1-sources.jar"/>
 	<classpathentry kind="lib" path="poem-jvm/lib/commons-io-1.3.2.jar"/>
 	<classpathentry kind="lib" path="poem-jvm/lib/commons-lang-2.4.jar"/>
 	<classpathentry kind="lib" path="poem-jvm/lib/commons-logging-1.0.3.jar"/>
@@ -57,7 +57,7 @@
 	<classpathentry kind="lib" path="poem-jvm/lib/spring-dao-2.0.6.jar"/>
 	<classpathentry kind="lib" path="poem-jvm/lib/spring-jdbc-2.0.6.jar"/>
 	<classpathentry kind="lib" path="poem-jvm/lib/xalan-2.7.0.jar"/>
-	<classpathentry kind="lib" path="poem-jvm/lib/xercesImpl-2.8.1.jar"/>
+	<classpathentry kind="lib" path="poem-jvm/lib/xercesImpl-2.8.1.jar" sourcepath="C:/Users/Philipp/.m2/repository/xerces/xercesImpl/2.8.1/xercesImpl-2.8.1-sources.jar"/>
 	<classpathentry kind="lib" path="poem-jvm/lib/xml-apis-1.0.b2.jar"/>
 	<classpathentry kind="lib" path="poem-jvm/lib/xml-apis-1.3.03.jar"/>
 	<classpathentry kind="lib" path="poem-jvm/lib/xml-apis-2.0.2.jar"/>
@@ -169,5 +169,6 @@
 	<classpathentry kind="lib" path="editor/lib/cos.jar"/>
 	<classpathentry kind="lib" path="editor/lib/jna.jar"/>
 	<classpathentry kind="lib" path="editor/lib/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="poem-jvm/lib/scribe-0.6.6-javadoc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
