Try to Morph Include Extend (does not work yet)

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-deploymentdir = C:\\Users\\Ralf\\apache-tomcat-6.0.26\\webapps
+deploymentdir = C:\\Documents and Settings\\D054090\\My Documents\\Tomcat 6.0\\webapps
 java-debug = on
 postgresql-hostname = localhost
 postgresql-username = poem
