--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,5 @@
 # Windows Tomcat 6 
-deploymentdir = C:/Programme/Tomcat6/webapps 
+deploymentdir = /home/swt2stud/upa/tomcat/webapps 
 # GNU/Linux (Debian/Ubuntu) Tomcat 5.5
 #deploymentdir = /var/lib/tomcat5.5/webapps
 
