UPA2010 Picture; minor changes to achieve independent work on different systems

--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <project name="Oryx Main Build Script" basedir="./">
 	
     <!-- Load additional properties -->
-    <property file="build.properties"/>
+    <property file="props/build.properties"/>
 	<property name="build-dir" value="build" />
 	<property name="target-dir" value="dist" />
     
