--- a/default_build.properties
+++ b/default_build.properties
@@ -1,5 +1,5 @@
 # Windows Tomcat 6 
-deploymentdir = T:\\eclipse\\Tomcat 6.0\\webapps
+deploymentdir = C:\\Users\\Tobi BP\\Documents\\EclipseWorkspace\\Tomcat 6.0\\webapps
 # GNU/Linux (Debian/Ubuntu) Tomcat 5.5
 #deploymentdir = /var/lib/tomcat5.5/webapps
 
