UPA2010 Picture; client-side implementation of import seems to be ready; Importer Servlet is registered in web.xml; Converter initially added; TODO: mapping from XML-tags to Java classes;Java classes to JSON translation; let's see how far we get with that, good evening;

--- a/editor/etc/web.xml
+++ b/editor/etc/web.xml
@@ -494,6 +494,12 @@
 		<servlet-name>VisioImporter</servlet-name>
 		<servlet-class>org.oryxeditor.server.VisioImporter</servlet-class>
 	</servlet>
+  
+    <servlet>
+      <display-name>PictureXML to PictureJSON</display-name>
+      <servlet-name>PictureImporter</servlet-name>
+      <servlet-class>org.oryxeditor.server.PictureImporter</servlet-class>
+    </servlet>
 
     <!-- Servlet Mappings -->
 <!--	
