UPA2010 Picture; now the client-side should be ready for import, correct XML is send to server-side now, had to correct something there; servlet is now correctly registered, forgot to add the mapping part in web.xml;

--- a/editor/etc/web.xml
+++ b/editor/etc/web.xml
@@ -799,6 +799,11 @@
 		<url-pattern>/visioimport</url-pattern>
 	</servlet-mapping>
 	
+	<servlet-mapping>
+		<servlet-name>PictureImporter</servlet-name>
+		<url-pattern>/pictureimporter</url-pattern>
+	</servlet-mapping>
+	
 	<jsp-config>
 		<taglib>
 			<taglib-uri>http://java.sun.com/jstl/core</taglib-uri>
